Fixed overflow issue on fleet modal slider

--- a/wp-content/themes/legends/style.css
+++ b/wp-content/themes/legends/style.css
@@ -2955,3 +2955,14 @@ p.mobile-box {
 .modal-header{
     border: none;
 }
+@media (min-width:768px){
+    .small-gallery .bx-viewport img {
+        max-width: 400px;
+
+    }
+    .small-gallery .bx-viewport li{
+        right: 484px;
+        margin-lefT: 45px;
+        margin-right: 45px;
+    }
+}
